= Supernaut.FX Changes
:homepage: https://github.com/SupernautApp/SupernautFX

A high-level view of the changes in each SupernautFX release.

== v0.1.2-SNAPSHOT

Released: Not yet

=== Dependency Upgrades

* Micronaut 2.3.2

=== GraalVM native-image Support

* Move Graal native-image reflection configuration resources to `app.supernaut/<artifact>/reflect-config.json`.

=== Build

* Gradle 6.8.2
* Github Actions: Use JDK 16 EA 36

== v0.1.1

Released: 2020.02.07

=== New Features

* Add support for GraalVM native image
* Provide non-modular ServiceLoader support for `MicronautFXLaunder`

=== API Changes

* Add `Launcher.launch` overload that doesn't require a BackgroundApp `Class`.

=== Documentation

* README.adoc updated
* Sample Gradle application in standalone project/repository.
* Sample Maven application in standalone project/repository.

=== Dependency Upgrades

* JavaFX 15.0.1
* Micronaut 2.3.1

=== Sample Apps

* Use new Supernaut Icon for MacOS builds (Linux, Windows icon config TBD)

=== Build

* Use `languageVersion = JavaLanguageVersion.of` in `build.gradle` and use JDK 16 toolchain for build/test
* Github Actions: Build with JDK 16 (but run Gradle with JDK 15)
* Travis CI: Update Linux distro to `focal` (Ubuntu 20.04 LTS)
* Gradle 6.8
* Badass JLink Plugin 2.23.3
* Spock 2.0-M4-groovy-3.0
* Micronaut Test Spock micronaut-test-spock 2.3.2
* Groovy 3.0.7

== v0.1.0

Released: 2020.10.21

=== app.supernaut

* Remove `slf4j-api` dependency

=== app.supernaut.fx

* Remove dependency on JavaFX :mac JARs from POMs. (JavaFX Gradle Plugin does this unintentionally)
* Remove dependency on `javax.inject`

=== app.supernaut.fx.micronaut

* Upgrade to Micronaut 2.1.2
* Remove dependency on JavaFX :mac JARs from POMs. (JavaFX Gradle Plugin does this unintentionally)
* Change `api` dependency from `micronaut-inject-java` to `micronaut-inject` (reduces transitive dependencies)

=== Sample Apps
