@@ -1,11 +1,7 @@
 [
   {
     "name" : "app.supernaut.fx.internal.OpenJfxProxyApplication",
-    "allDeclaredConstructors" : true,
     "allPublicConstructors" : true,
-    "allDeclaredFields" : true,
-    "allPublicFields" : true,
-    "allDeclaredMethods" : true,
     "allPublicMethods" : true
   }
 ]
