@@ -14,6 +14,7 @@ Released: Not yet
 === GraalVM native-image Support
 
 * Move Graal native-image reflection configuration resources to `app.supernaut/<artifact>/reflect-config.json`.
+* Remove unneeded/redundant lines in `reflect-config.json` files.
 
 === Build
 
